--- a/src/Themes/Styles/Assets/Expander.xaml
+++ b/src/Themes/Styles/Assets/Expander.xaml
@@ -9,7 +9,8 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
             <Border x:Name="BorderHeader" 
-                    CornerRadius="3" 
+                    CornerRadius="{DynamicResource Control.CornerRadius}" 
+                    SnapsToDevicePixels="True"
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}">
                 <ToggleButton Style="{StaticResource ExpanderDownToggleButton}"
@@ -23,7 +24,8 @@
                      BorderBrush="{TemplateBinding BorderBrush}"
                      Background="{TemplateBinding Background}"
                      BorderThickness="1,0,1,1"
-                     CornerRadius="0,0,3,3">
+                     SnapsToDevicePixels="True"
+                     CornerRadius="{DynamicResource Control.CornerRadiusBottom}" >
                 <Grid Margin="{TemplateBinding Padding}">
                     <ContentPresenter/>
                 </Grid>
@@ -32,7 +34,7 @@
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsExpanded" Value="true">
-                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="3,3,0,0"/>
+                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="{DynamicResource Control.CornerRadiusTop}"/>
                 <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
             </Trigger>
             <Trigger Property="IsMouseOver" Value="true">
@@ -54,13 +56,14 @@
                      BorderBrush="{TemplateBinding BorderBrush}"
                      Background="{TemplateBinding Background}"
                      BorderThickness="1,1,1,0"
-                     CornerRadius="3,3,0,0">
+                     SnapsToDevicePixels="True"
+                     CornerRadius="{DynamicResource Control.CornerRadiusTop}" >
                 <Grid Margin="{TemplateBinding Padding}">
                     <ContentPresenter/>
                 </Grid>
             </Border>
             <Border x:Name="BorderHeader" Grid.Row="1"
-                    CornerRadius="3" 
+                    CornerRadius="{DynamicResource Control.CornerRadius}"  
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}">
                 <ToggleButton Style="{StaticResource ExpanderUpToggleButton}"
@@ -73,7 +76,7 @@
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsExpanded" Value="true">
-                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="0,0,3,3"/>
+                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="{DynamicResource Control.CornerRadiusBottom}"/>
                 <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
             </Trigger>
 
@@ -96,13 +99,14 @@
                      BorderBrush="{TemplateBinding BorderBrush}"
                      Background="{TemplateBinding Background}"
                      BorderThickness="1,1,0,1"
-                     CornerRadius="3,0,0,3">
+                     SnapsToDevicePixels="True"
+                     CornerRadius="{DynamicResource Control.CornerRadiusLeft}">
                 <Grid Margin="{TemplateBinding Padding}">
                     <ContentPresenter/>
                 </Grid>
             </Border>
             <Border x:Name="BorderHeader" Grid.Column="1"
-                    CornerRadius="3" 
+                    CornerRadius="{DynamicResource Control.CornerRadius}"  
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}">
                 <ToggleButton Style="{StaticResource ExpanderLeftToggleButton}"
@@ -119,7 +123,7 @@
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsExpanded" Value="true">
-                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="0,3,3,0"/>
+                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="{DynamicResource Control.CornerRadiusRight}"/>
                 <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
             </Trigger>
 
@@ -142,13 +146,15 @@
                      BorderBrush="{TemplateBinding BorderBrush}"
                      Background="{TemplateBinding Background}"
                      BorderThickness="0,1,1,1"
-                     CornerRadius="0,3,3,0">
+                     SnapsToDevicePixels="True"
+                     CornerRadius="{DynamicResource Control.CornerRadiusRight}" >
                 <Grid Margin="{TemplateBinding Padding}">
                     <ContentPresenter/>
                 </Grid>
             </Border>
             <Border x:Name="BorderHeader" Grid.Column="0"
-                    CornerRadius="3" 
+                    CornerRadius="{DynamicResource Control.CornerRadius}"  
+                    SnapsToDevicePixels="True"
                     BorderBrush="{TemplateBinding BorderBrush}" 
                     BorderThickness="{TemplateBinding BorderThickness}">
                 <ToggleButton Style="{StaticResource ExpanderRightToggleButton}"
@@ -165,7 +171,7 @@
         </Grid>
         <ControlTemplate.Triggers>
             <Trigger Property="IsExpanded" Value="true">
-                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="3,0,0,3"/>
+                <Setter Property="CornerRadius" TargetName="BorderHeader" Value="{DynamicResource Control.CornerRadiusLeft}"/>
                 <Setter Property="Visibility" TargetName="ExpandSite" Value="Visible" />
             </Trigger>
 
@@ -183,10 +189,10 @@
         <Setter Property="Background" Value="{StaticResource Control.Background}" />
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
-        <Setter Property="Padding" Value="{StaticResource Panel.Padding}"/>
+        <Setter Property="Padding" Value="{DynamicResource Panel.Padding}"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        
+        <Setter Property="IsExpanded" Value="True"/>
         <Setter Property="Template" Value="{StaticResource ExpanderDownTemplate}"/>
        
         <Style.Triggers>
