--- a/src/Themes/Styles/Assets/Label.xaml
+++ b/src/Themes/Styles/Assets/Label.xaml
@@ -15,7 +15,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Label">
-                    <Border CornerRadius="5" 
+                    <Border CornerRadius="{DynamicResource Control.CornerRadius}"  
                             BorderBrush="{TemplateBinding BorderBrush}" 
                             BorderThickness="{TemplateBinding BorderThickness}" 
                             Background="{TemplateBinding Background}" 
