--- a/src/Themes/Styles/Assets/PasswordBox.xaml
+++ b/src/Themes/Styles/Assets/PasswordBox.xaml
@@ -8,13 +8,13 @@
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="Padding" Value="3,2"/>
+        <Setter Property="Margin" Value="{DynamicResource Control.VerticalMargin}"/>
+        <Setter Property="Padding" Value="{DynamicResource Text.Margin}"/>
         <Setter Property="AllowDrop" Value="true"/>
         <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="SelectionBrush" Value="{StaticResource Item.BackgroundSelected}"/>
-        <Setter Property="MinHeight" Value="{StaticResource TextElement.Height}"/>
-        <Setter Property="Margin" Value="{StaticResource VerticalMargin}"/>
+        <Setter Property="MinHeight" Value="{DynamicResource TextElement.Height}"/>
         <Setter Property="attach:PasswordElement.Password" Value="{Binding Password,RelativeSource={RelativeSource Self}}"/>
         <Setter Property="Template">
             <Setter.Value>
@@ -25,9 +25,10 @@
                             <ColumnDefinition/>
                             <ColumnDefinition Width="{Binding Path=(attach:PasswordElement.SuffixWidth),RelativeSource={RelativeSource TemplatedParent}}"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Path=(attach:PasswordElement.Title),RelativeSource={RelativeSource TemplatedParent}}"/>
+                        <TextBlock Grid.Column="0" 
+                                   Text="{Binding Path=(attach:PasswordElement.Title),RelativeSource={RelativeSource TemplatedParent}}"/>
 
-                        <Grid Grid.Column="1">
+                        <Grid Grid.Column="1" Name="MainGrid">
                             <Border x:Name="Bd"
                                 BorderThickness="{TemplateBinding BorderThickness}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
@@ -39,16 +40,16 @@
 
                             <ScrollViewer x:Name="PART_ContentHost" RenderOptions.ClearTypeHint="Auto"
                                       SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"  
-                                      Padding="{TemplateBinding Padding}" />
+                                      Padding="{TemplateBinding Padding}"/>
                             <TextBlock x:Name="SeePasswordLable" 
                                        Text="{Binding Path=(attach:PasswordElement.Password),RelativeSource={RelativeSource TemplatedParent}}"
-                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                   Padding="{TemplateBinding Padding}" 
-                                   Visibility="Collapsed"/>
+                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                       Padding="{TemplateBinding Padding}" 
+                                       Visibility="Collapsed"/>
 
-                            <Button Grid.Column="1" x:Name="SeePasswordButton"  Width="20" HorizontalAlignment="Right"
-                                    attach:ButtonElement.IsNoBorder="True" Margin="0,0,5,0"
+                            <Button Grid.Column="1" x:Name="SeePasswordButton"  MinWidth="20" HorizontalAlignment="Right" 
+                                    attach:ButtonElement.IsNoBorder="True" Margin="{StaticResource Control.RightMargin}"
                                     attach:ButtonElement.IcoGeometry="{StaticResource NotSeePasswordGeometry}"/>
 
 
@@ -68,8 +69,7 @@
                             <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="{StaticResource ForegroundDisabled}"/>
-                            <Setter Property="Background" Value="{StaticResource Control.BackgroundDisabled}"/>
+                            <Setter TargetName="MainGrid" Property="Opacity" Value="0.6"/>
                         </Trigger>
                         <DataTrigger Binding="{Binding IsPressed,ElementName=SeePasswordButton}" Value="true">
                             <Setter Property="Visibility" TargetName="PART_ContentHost" Value="Collapsed"/>
