--- a/src/Themes/Basic/Converters.xaml
+++ b/src/Themes/Basic/Converters.xaml
@@ -1,17 +1,24 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:converter="clr-namespace:WYW.UI.Converters">
+    <converter:AdditionConverter x:Key="AdditionConverter"/>
     <converter:CircleCornerRadiusConverter x:Key="CircleCornerRadiusConverter"/>
     <converter:CircleRadiusConverter x:Key="CircleRadiusConverter"/>
+    <converter:ConstCollectionToBooleanConverter x:Key="ConstCollectionToBooleanConverter"/>
+    <converter:ConstCollectionToVisibilityConverter x:Key="ConstCollectionToVisibilityConverter"/>
     <converter:ConstToBooleanConverter x:Key="ConstToBooleanConverter"/>
     <converter:ConstToReverseBooleanConverter x:Key="ConstToReverseBooleanConverter"/>
     <converter:ConstToReverseVisibilityConverter x:Key="ConstToReverseVisibilityConverter"/>
     <converter:ConstToVisibilityConverter x:Key="ConstToVisibilityConverter"/>
+    <converter:CornerRadiusMultiplicationConverter x:Key="CornerRadiusMultiplicationConverter"/>
+    <converter:EnumDescriptionConverter x:Key="EnumDescriptionConverter"/>
+    <converter:MoreThanToBooleanConverter x:Key="MoreThanToBooleanConverter"/>
     <converter:MultiBooleanConverter x:Key="MultiBooleanConverter"/>
     <converter:MultiCommandParametersConverter x:Key="MultiCommandParametersConverter"/>
     <converter:MultiplicationConverter x:Key="MultiplicationConverter"/>
     <converter:ProgressBarCornerRadiusConverter x:Key="ProgressBarCornerRadiusConverter"/>
     <converter:ReverseConverter x:Key="ReverseConverter"/>
     <converter:StringFormatConverter x:Key="StringFormatConverter"/>
+    <converter:ThicknessMultiplicationConverter x:Key="ThicknessMultiplicationConverter"/>
     
 </ResourceDictionary>
