--- a/src/Themes/Styles/Assets/Button.xaml
+++ b/src/Themes/Styles/Assets/Button.xaml
@@ -95,6 +95,8 @@
         <Setter Property="SnapsToDevicePixels" Value="true"/>
         <Setter Property="UseLayoutRounding" Value="true"/>
         <Setter Property="attach:ButtonElement.CornerRadius" Value="0"/>
+        <Setter Property="attach:ButtonElement.IcoHeight" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self},Converter={StaticResource MultiplicationConverter},ConverterParameter=1.1}"/>
+        <Setter Property="attach:ButtonElement.IcoWidth" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self},Converter={StaticResource MultiplicationConverter},ConverterParameter=1.1}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ButtonBase}">
@@ -173,6 +175,7 @@
     <Style x:Key="{x:Type Button}" 
            BasedOn="{StaticResource ButtonBaseStyle}"
            TargetType="{x:Type Button}">
+        <Setter Property="attach:ButtonElement.CornerRadius" Value="{StaticResource Control.CornerRadius}"/>
         <Style.Triggers>
             <DataTrigger Binding="{Binding IsDefault,RelativeSource={RelativeSource Self}}" Value="true">
                 <Setter Property="Background" Value="{StaticResource Item.BackgroundSelected}"/>
@@ -194,9 +197,9 @@
     <Style x:Key="SystemButtonStyle" 
            BasedOn="{StaticResource ButtonBaseStyle}"
            TargetType="{x:Type Button}">
+        <Setter Property="attach:ButtonElement.IcoHeight" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self}}"/>
+        <Setter Property="attach:ButtonElement.IcoWidth" Value="{Binding FontSize,RelativeSource={RelativeSource Mode=Self}}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="0"/>
-        <Setter Property="attach:ButtonElement.IcoHeight" Value="12"/>
-        <Setter Property="attach:ButtonElement.IcoWidth" Value="15"/>
     </Style>
 </ResourceDictionary>
