--- a/src/Themes/Styles/Assets/CheckBox.xaml
+++ b/src/Themes/Styles/Assets/CheckBox.xaml
@@ -2,10 +2,11 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <Style x:Key="CheckBoxBase" TargetType="{x:Type CheckBox}">
-        <Setter Property="Height" Value="{StaticResource TextElement.Height}"/>
+        <Setter Property="Height" Value="{DynamicResource TextElement.Height}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
+        <Setter Property="BorderBrush" Value="{StaticResource RadioButton.BorderBrush}" />
         <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Template">
             <Setter.Value>
@@ -18,6 +19,7 @@
                         <Border x:Name="CheckBorder" Width="20" Height="20" 
                                 Background="{TemplateBinding Background}" 
                                 BorderBrush="{TemplateBinding BorderBrush}"
+                                SnapsToDevicePixels="True"
                                 BorderThickness="{TemplateBinding BorderThickness}">
                             <Grid>
                                 <Path x:Name="CheckMark"  Margin="2" Visibility="Collapsed"
@@ -29,7 +31,7 @@
                         </Border>
                         <ContentPresenter Grid.Column="1" Focusable="False"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          Margin="5,0,0,0" RecognizesAccessKey="True"
+                                          Margin="{DynamicResource Control.LeftMargin}" RecognizesAccessKey="True"
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                           VerticalAlignment="Center" />
                     </Grid>
@@ -44,12 +46,13 @@
                             <Setter TargetName="Indeterminate" Property="Visibility" Value="Visible" />
                         </MultiDataTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="CheckBorder" Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
+                            <Setter TargetName="CheckBorder" Property="BorderBrush" Value="{StaticResource RadioButton.BorderBrushHover}" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
                             <Setter Property="Background" Value="{StaticResource Item.BackgroundSelected}"/>
                             <Setter TargetName="CheckMark" Property="Visibility" Value="Visible" />
                             <Setter TargetName="Indeterminate" Property="Visibility" Value="Collapsed" />
+                            <Setter Property="BorderThickness" Value="0"/>
                         </Trigger>
              
                         <Trigger Property="IsFocused" Value="true">
