--- a/src/Themes/Styles/Assets/ComboBoxItem.xaml
+++ b/src/Themes/Styles/Assets/ComboBoxItem.xaml
@@ -2,15 +2,15 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
 
-    <Style x:Key="{x:Type ComboBoxItem}" TargetType="{x:Type ComboBoxItem}">
+    <Style x:Key="ComboBoxItemBaseStyle" TargetType="{x:Type ComboBoxItem}">
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="HorizontalContentAlignment" Value="{Binding Path=HorizontalContentAlignment,RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
         <Setter Property="VerticalContentAlignment" Value="{Binding Path=VerticalContentAlignment,RelativeSource={RelativeSource AncestorType={x:Type ItemsControl}}}"/>
-        <Setter Property="Padding" Value="5,2"/>
+        <Setter Property="Padding" Value="{DynamicResource Control.HorizontalMargin}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="{StaticResource Control.Background}"/>
-        <Setter Property="MinHeight" Value="{StaticResource TextElement.Height}"/>
-        <Setter Property="Height" Value="{Binding Path=(attach:ComboBoxElement.ComboBoxItemHeight),RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox}}"/>
+        <Setter Property="MinHeight" Value="{DynamicResource Item.Height}"/>
+        <Setter Property="Height" Value="{Binding Path=Height,RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=ComboBox}}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBoxItem}">
@@ -26,15 +26,17 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsHighlighted" Value="true">
-                            <Setter Property="Background" Value="{StaticResource  Item.BackgroundSelected}"/>
+                            <Setter Property="Background" Value="{StaticResource Item.BackgroundSelected}"/>
                             <Setter Property="Foreground" Value="{StaticResource Item.ForegroundSelected}"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
-                            <Setter Property="Foreground" Value="{StaticResource ForegroundDisabled}"/>
+                            <Setter Property="Opacity" Value="0.6" />
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style TargetType="{x:Type ComboBoxItem}" BasedOn="{StaticResource ComboBoxItemBaseStyle}"/>
 </ResourceDictionary>
