--- a/src/Themes/Styles/Assets/ContextMenu.xaml
+++ b/src/Themes/Styles/Assets/ContextMenu.xaml
@@ -8,15 +8,16 @@
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="Padding" Value="0,6" />
+        <Setter Property="Padding" Value="{DynamicResource Control.VerticalMargin}" />
         <Setter Property="MinWidth" Value="150" />
+
         <Setter Property="Grid.IsSharedSizeScope" Value="true" />
         <Setter Property="ScrollViewer.PanningMode" Value="Both" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ContextMenu}">
-                    <Grid Margin="4">
+                    <Grid Margin="{DynamicResource Control.Margin}">
                         <Border Background="#0C000000" BorderBrush="#0F000000" BorderThickness="1" CornerRadius="2.5"
                                 Margin="-1" />
                         <Border Background="#0A000000" BorderBrush="#0C000000" BorderThickness="1" CornerRadius="2.75"
