--- a/src/Themes/Styles/Assets/DatePicker.xaml
+++ b/src/Themes/Styles/Assets/DatePicker.xaml
@@ -8,6 +8,7 @@
         <Setter Property="Padding" Value="1,0,0,0" />
         <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Template">
             <Setter.Value>
@@ -34,7 +35,8 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                Padding="{TemplateBinding Padding}">
+                                Padding="{TemplateBinding Padding}"
+                                SnapsToDevicePixels="True">
                             <Grid x:Name="WatermarkContent"
                                   HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                   VerticalAlignment="{TemplateBinding VerticalContentAlignment}">
@@ -69,7 +71,7 @@
                         <Grid Background="{TemplateBinding Background}">
                             <Path Fill="{TemplateBinding Foreground}" 
                                   Data="{StaticResource CalendarGeometry}"
-                                  Stretch="Uniform" Margin="3" />
+                                  Stretch="Uniform" Margin="{DynamicResource Text.Margin}" />
                         </Grid>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -97,7 +99,7 @@
         <Setter Property="SelectedDateFormat" Value="Short" />
         <Setter Property="Padding" Value="2" />
         <Setter Property="Focusable" Value="True" />
-        <Setter Property="Height" Value="{StaticResource TextElement.Height}" />
+        <Setter Property="Height" Value="{DynamicResource TextElement.Height}" />
         <Setter Property="CalendarStyle">
             <Setter.Value>
                 <Style TargetType="Calendar" BasedOn="{StaticResource {x:Type Calendar}}"/>
@@ -117,6 +119,7 @@
                         <Border Grid.Column="1" x:Name="LayoutRoot" BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             Background="{TemplateBinding Background}"
+                                SnapsToDevicePixels="True"
                             Padding="{TemplateBinding Padding}">
                             <Grid x:Name="PART_Root"
                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
@@ -147,7 +150,7 @@
 
                             </Grid>
                         </Border>
-                        <TextBlock Grid.Column="2" Margin="5,0,0,0" Text="{Binding Path=(attach:DataPickerElement.Suffix),RelativeSource={RelativeSource TemplatedParent}}"  />
+                        <TextBlock Grid.Column="2" Margin="{DynamicResource Control.LeftMargin}" Text="{Binding Path=(attach:DataPickerElement.Suffix),RelativeSource={RelativeSource TemplatedParent}}"  />
                     </Grid>
 
                     <ControlTemplate.Triggers>
@@ -161,15 +164,15 @@
                             <Setter TargetName="PART_TextBox" Property="Foreground"
                                     Value="{StaticResource ForegroundDisabled}" />
                         </Trigger>
-                        <Trigger Property="IsFocused" Value="true">
-                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}" />
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
+                            <Setter Property="Foreground" Value="{StaticResource ForegroundHover}" />
                         </Trigger>
                         <Trigger Property="IsKeyboardFocusWithin" Value="true">
                             <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}" />
                         </Trigger>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
-                            <Setter Property="Foreground" Value="{StaticResource ForegroundHover}" />
+                        <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}" />
                         </Trigger>
                     </ControlTemplate.Triggers>
 
