--- a/src/Themes/Styles/Assets/DocumentViewer.xaml
+++ b/src/Themes/Styles/Assets/DocumentViewer.xaml
@@ -65,7 +65,7 @@
                                         <Grid  Height="40" Width="40"  Margin="0,10">
                                             <Path Data="{StaticResource EllipseGeometry}" Stroke="{StaticResource BorderBrush}" StrokeThickness="1"/>
 
-                                            <TextBlock Margin="3" VerticalAlignment="Center" HorizontalAlignment="Center">
+                                            <TextBlock Margin="{DynamicResource Text.Margin}" VerticalAlignment="Center" HorizontalAlignment="Center">
                                                 <TextBlock.Text>
                                                     <MultiBinding StringFormat="{}{0}/{1}">
                                                         <Binding Path="MasterPageNumber"
