--- a/src/Themes/Styles/Assets/ListBox.xaml
+++ b/src/Themes/Styles/Assets/ListBox.xaml
@@ -9,12 +9,15 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
         <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemBaseStyle}" />
+        <Setter Property="VerticalContentAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListBox">
                     <Border Background="{TemplateBinding Background}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}"
+                            SnapsToDevicePixels="True"
                             Padding="{TemplateBinding Padding}">
                         <ScrollViewer Padding="{TemplateBinding Padding}" Focusable="false">
                             <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
@@ -27,15 +30,11 @@
 
     <Style x:Key="ListBoxUniformGridStyle" TargetType="{x:Type ListBox}">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="BorderThickness" Value="1" />
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Disabled"/>
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Disabled"/>
-        <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemUniformGridStyle}" />
+        <Setter Property="ItemContainerStyle" Value="{StaticResource ListBoxItemOnlyBorderSelectedStyle}" />
         <Setter Property="ItemsPanel">
             <Setter.Value>
                 <ItemsPanelTemplate>
@@ -50,6 +49,7 @@
                     <Border Background="{TemplateBinding Background}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             BorderBrush="{TemplateBinding BorderBrush}"
+                            SnapsToDevicePixels="True"
                             Padding="{TemplateBinding Padding}">
                         <ScrollViewer Padding="{TemplateBinding Padding}" Focusable="false"
                                       HorizontalScrollBarVisibility="Disabled"
