--- a/src/Themes/Styles/Assets/ListBoxItem.xaml
+++ b/src/Themes/Styles/Assets/ListBoxItem.xaml
@@ -7,8 +7,8 @@
         <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment,RelativeSource={RelativeSource AncestorType=ListBox}}" />
         <Setter Property="Margin" Value="0" />
         <Setter Property="Padding" Value="5,0" />
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="MinHeight" Value="{StaticResource TextElement.Height}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListBoxItem">
@@ -38,21 +38,58 @@
             </Setter.Value>
         </Setter>
     </Style>
-    
-    <Style x:Key="ListBoxItemUniformGridStyle" TargetType="ListBoxItem">
+
+    <Style x:Key="ListBoxItemOnlyBorderSelectedStyle" TargetType="ListBoxItem">
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Foreground}" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="MinHeight" Value="{StaticResource TextElement.Height}" />
-        <Setter Property="VerticalAlignment" Value="{Binding VerticalContentAlignment,RelativeSource={RelativeSource AncestorType=ListBox}}"/>
-        <Setter Property="HorizontalAlignment" Value="{Binding HorizontalContentAlignment,RelativeSource={RelativeSource AncestorType=ListBox}}"/>
-         
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ListBoxItem">
-                    <Grid VerticalAlignment="{TemplateBinding VerticalAlignment}"
-                          HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
-                        <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
-                    </Grid>
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                           Background="{TemplateBinding Background}" SnapsToDevicePixels="True" >
+                        <Grid VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
+                            <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Grid>
+                    </Border>
+             
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Opacity" Value="0.6" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="true">
+                            <Setter Property="BorderThickness" Value="1"/>
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushFocused}" />
+                        </Trigger>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource Item.BackgroundHover}" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ListBoxItemNoBorderStyle" TargetType="ListBoxItem">
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="ListBoxItem">
+                    <Border BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                           Background="{TemplateBinding Background}" SnapsToDevicePixels="True" >
+                        <Grid VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalAlignment}">
+                            <ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </Grid>
+                    </Border>
+
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Opacity" Value="0.6" />
