--- a/src/Themes/Styles/Assets/ListViewItem.xaml
+++ b/src/Themes/Styles/Assets/ListViewItem.xaml
@@ -1,14 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style  TargetType="{x:Type ListViewItem}">
-        <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="Foreground" Value="{Binding Foreground,RelativeSource={RelativeSource AncestorType=ListView}}"/>
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="HorizontalContentAlignment" Value="{Binding HorizontalContentAlignment,RelativeSource={RelativeSource AncestorType=ListView}}" />
         <Setter Property="VerticalContentAlignment" Value="{Binding VerticalContentAlignment,RelativeSource={RelativeSource AncestorType=ListView}}" />
         <Setter Property="Margin" Value="0" />
-        <Setter Property="Padding" Value="5,0" />
+        <Setter Property="Padding" Value="{DynamicResource Control.HorizontalMargin}" />
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="MinHeight" Value="{StaticResource TextElement.Height}" />
+        <Setter Property="MinHeight" Value="{DynamicResource Item.Height}" />
 
         <Setter Property="Template">
             <Setter.Value>
