--- a/src/Themes/Styles/Assets/RadioButton.xaml
+++ b/src/Themes/Styles/Assets/RadioButton.xaml
@@ -1,10 +1,12 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:attach="clr-namespace:WYW.UI.Controls.Attach">
     <Style  TargetType="{x:Type RadioButton}">
-        <Setter Property="Height" Value="{StaticResource TextElement.Height}"/>
+        <Setter Property="Height" Value="{DynamicResource TextElement.Height}"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}" />
-        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
+        <Setter Property="BorderBrush" Value="{StaticResource RadioButton.BorderBrush}" />
         <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Template">
             <Setter.Value>
@@ -15,27 +17,65 @@
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
                         <Border x:Name="Border" Width="20" Height="20" CornerRadius="10"
-                                Background="{TemplateBinding Background}" 
                                 BorderBrush="{TemplateBinding BorderBrush}"
+                                Background="{TemplateBinding Background}"
                                 BorderThickness="{TemplateBinding BorderThickness}">
-                            <Border x:Name="Mark" Width="10" Height="10" CornerRadius="5" Visibility="Collapsed"
-                                    Background="{StaticResource Item.BackgroundSelected}"
+                            <Border x:Name="Mark" Width="10" Height="10" CornerRadius="{DynamicResource Control.CornerRadius}"  Visibility="Collapsed"
+                                    Background="{StaticResource Item.ForegroundSelected}"
                                     VerticalAlignment="Center" HorizontalAlignment="Center">
                             </Border>
                         </Border>
                         <ContentPresenter Grid.Column="1" Focusable="False" 
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                          Margin="5,0,0,0" RecognizesAccessKey="True"
+                                          Margin="{DynamicResource Control.LeftMargin}" RecognizesAccessKey="True"
                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
                                           VerticalAlignment="Center" />
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
+                            <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource RadioButton.BorderBrushHover}" />
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
+                            <Setter Property="Background" Value="{StaticResource Item.BackgroundSelected}"/>
                             <Setter TargetName="Mark" Property="Visibility" Value="Visible" />
-                            <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource Item.BackgroundSelected}" />
+                            <Setter Property="BorderThickness" Value="0"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter Property="Opacity" Value="0.6"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="RadioButtonFlatStyle"  TargetType="{x:Type RadioButton}">
+        <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+        <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}" />
+        <Setter Property="Foreground" Value="{StaticResource Foreground}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type RadioButton}">
+                    <Border  Padding="{TemplateBinding Padding}" Background="{TemplateBinding Background}"
+                             BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}"
+                             CornerRadius="{Binding Path=(attach:RadioButtonElement.CornerRadius),RelativeSource={RelativeSource  Mode=TemplatedParent}}">
+                        <ContentPresenter Grid.Column="1" Focusable="False" 
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          RecognizesAccessKey="True"
+                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}" />
+                    </Border>
+                     
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="BorderBrush" Value="{StaticResource BorderBrushHover}" />
+                        </Trigger>
+                        <Trigger Property="IsChecked" Value="True">
+                            <Setter  Property="Background" Value="{StaticResource Item.BackgroundSelected}" />
+                            <Setter  Property="Foreground" Value="{StaticResource Item.ForegroundSelected}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Opacity" Value="0.6"/>
