--- a/src/Themes/Styles/Assets/ToolBar.xaml
+++ b/src/Themes/Styles/Assets/ToolBar.xaml
@@ -94,7 +94,7 @@
                 <ToggleButton Margin="0,4,0,0" x:Name="OverflowButton" ClickMode="Press" FocusVisualStyle="{x:Null}" IsChecked="{Binding IsOverflowOpen, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" IsEnabled="{TemplateBinding HasOverflowItems}" Style="{StaticResource ToolBarVerticalOverflowButtonStyle}"/>
                 <Popup x:Name="OverflowPopup" AllowsTransparency="true" Focusable="false" IsOpen="{Binding IsOverflowOpen, RelativeSource={RelativeSource TemplatedParent}}" PopupAnimation="{StaticResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Right" StaysOpen="false">
                     <Border x:Name="ToolBarSubMenuBorder" CornerRadius="{Binding Path=(attach:ToolbarElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" Background="{StaticResource Control.Background}" RenderOptions.ClearTypeHint="Enabled">
-                        <ToolBarOverflowPanel x:Name="PART_ToolBarOverflowPanel" KeyboardNavigation.DirectionalNavigation="Cycle" FocusVisualStyle="{x:Null}" Focusable="true" Margin="6" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" KeyboardNavigation.TabNavigation="Cycle" WrapWidth="200"/>
+                        <ToolBarOverflowPanel x:Name="PART_ToolBarOverflowPanel" KeyboardNavigation.DirectionalNavigation="Cycle" FocusVisualStyle="{x:Null}" Focusable="true" Margin="{DynamicResource Control.Margin}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" KeyboardNavigation.TabNavigation="Cycle" WrapWidth="200"/>
                     </Border>
                 </Popup>
             </Grid>
@@ -130,7 +130,7 @@
                               Style="{StaticResource ToolBarHorizontalOverflowButtonStyle}"/>
                 <Popup x:Name="OverflowPopup" AllowsTransparency="true" Focusable="false" IsOpen="{Binding IsOverflowOpen, RelativeSource={RelativeSource TemplatedParent}}" PopupAnimation="{StaticResource {x:Static SystemParameters.ComboBoxPopupAnimationKey}}" Placement="Bottom" StaysOpen="false">
                     <Border x:Name="ToolBarSubMenuBorder" CornerRadius="{Binding Path=(attach:ToolbarElement.CornerRadius),RelativeSource={RelativeSource TemplatedParent}}" BorderBrush="{StaticResource BorderBrush}" BorderThickness="1" Background="{StaticResource Control.Background}" RenderOptions.ClearTypeHint="Enabled">
-                        <ToolBarOverflowPanel x:Name="PART_ToolBarOverflowPanel" KeyboardNavigation.DirectionalNavigation="Cycle" FocusVisualStyle="{x:Null}" Focusable="true" Margin="6" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" KeyboardNavigation.TabNavigation="Cycle" WrapWidth="200"/>
+                        <ToolBarOverflowPanel x:Name="PART_ToolBarOverflowPanel" KeyboardNavigation.DirectionalNavigation="Cycle" FocusVisualStyle="{x:Null}" Focusable="true" Margin="{DynamicResource Control.Margin}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" KeyboardNavigation.TabNavigation="Cycle" WrapWidth="200"/>
                     </Border>
                 </Popup>
             </Grid>
